--- a/Session3Components/app/src/main/res/layout/interface_event.xml
+++ b/Session3Components/app/src/main/res/layout/interface_event.xml
@@ -24,7 +24,7 @@
         android:layout_alignParentStart="true" />
 
     <Button
-        android:text="Click for Toast"
+        android:text="@string/button_1_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/login"
@@ -44,7 +44,7 @@
         android:id="@+id/checkBox" />
 
     <Button
-        android:text="Games Info"
+        android:text="@string/button_3_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/checkBox2"
@@ -54,7 +54,7 @@
         android:id="@+id/button4" />
 
     <Button
-        android:text="Tell Gender"
+        android:text="@string/button_2_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/button3"
@@ -103,4 +103,23 @@
             android:id="@+id/radioButton2"
             android:layout_weight="1" />
     </RadioGroup>
+
+    <Button
+        android:text="@string/button_1_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/button4"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="28dp"
+        android:id="@+id/button" />
+
+    <TextView
+        android:text="@string/hello_world"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView4"
+        android:layout_alignTop="@+id/login"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
